--- a/app/src/main/res/layout/activity_bookdetails.xml
+++ b/app/src/main/res/layout/activity_bookdetails.xml
@@ -32,10 +32,10 @@
             android:padding="19dp">
 
             <TextView
-                android:text="Results for your search"
+                android:text="No book to display"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/app_booksfound"
+                android:id="@+id/app_detailtitle"
                 android:textSize="25sp"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"/>
