--- a/app/src/main/res/layout/activity_emailpassword.xml
+++ b/app/src/main/res/layout/activity_emailpassword.xml
@@ -4,11 +4,18 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"/>
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -84,24 +91,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/status"
-                android:textColor="#000000"
-                android:padding="20dp"/>
+                android:textColor="#FFFFFF"
+                android:padding="20dp"
+                android:background="#59be7e"
+                android:textAlignment="center"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/detail"
-                android:textColor="#000000"/>
+                android:textColor="#FFFFFF"
+                android:padding="20dp"
+                android:background="#59be7e"
+                android:textAlignment="center"/>
 
         </LinearLayout>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Continue"
-            android:padding="40dp"
-            android:id="@+id/continue_button"
-            android:visibility="invisible"/>
 
         <Space
             android:layout_width="match_parent"
