--- a/app/src/main/res/layout/activity_findbooks.xml
+++ b/app/src/main/res/layout/activity_findbooks.xml
@@ -4,27 +4,39 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#FFFFFF">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"/>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#459462">
+            android:background="#459462"
+            android:padding="10dp">
 
             <TextView
-                android:text="TBR Jar"
+                android:text="Search Books"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/app_title"
+                android:id="@+id/app_search"
                 android:textSize="40sp"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"/>
