--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,12 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="jessie_stam.jessiestam_pset6_desktop.MainActivity"
     android:background="#FFFFFF">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -17,12 +17,21 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"/>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#459462">
+            android:background="#459462"
+            android:padding="10dp">
 
             <TextView
                 android:text="TBR Jar"
@@ -31,7 +40,7 @@
                 android:id="@+id/app_title"
                 android:textSize="40sp"
                 android:textAlignment="center"
-                android:textColor="#FFFFFF"/>
+                android:textColor="#FFFFFF" />
         </FrameLayout>
 
         <TextView
