So far so good...

--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:background="#459462"
     android:elevation="5dp"
-    app:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark">
     
     <TextView
         android:layout_width="match_parent"
