--- a/app/src/main/res/layout/activity_bookdetails.xml
+++ b/app/src/main/res/layout/activity_bookdetails.xml
@@ -13,13 +13,13 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <Space
             android:layout_width="wrap_content"
@@ -39,22 +39,138 @@
                 android:textSize="25sp"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"/>
+
         </FrameLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/book_add_instr"
-            android:textColor="#000000"
-            android:padding="17dp"
-            android:textSize="15sp"/>
+            android:padding="10dp">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/booksfound_list"
-            android:scrollbars="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:padding="10dp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/book_cover_id"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:paddingLeft="110dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:text="Written by"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/book_author"
+                    android:textSize="12sp"
+                    android:textColor="#000000"/>
+
+                <TextView
+                    android:text="No author to display"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/book_author_id"
+                    android:textSize="25sp"
+                    android:textColor="#000000"/>
+
+                <TextView
+                    android:text="No year to display"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/book_year_id"
+                    android:textSize="20sp"
+                    android:textColor="#000000"/>
+
+                <android.support.v4.widget.Space
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
+
+                <TextView
+                    android:text="Rating on 0/5 scale"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/book_rating"
+                    android:textSize="12sp"
+                    android:textColor="#000000"/>
+
+                <TextView
+                    android:text="No rating to display"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/book_rating_id"
+                    android:textSize="20sp"
+                    android:textColor="#000000"/>
+
+            </LinearLayout>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="20dp">
+
+            <TextView
+                android:text="No summary to display"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/book_summary"
+                android:textSize="15sp"
+                android:textColor="#000000"
+                android:layout_weight="1"/>
+
+            <Button
+                android:text="Add book to list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/openoptions_button"
+                android:textColor="#FFFFFF" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1">
+
+                <Button
+                    android:text="TBR Jar"
+                    android:textSize="9sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tbr_button"
+                    android:visibility="gone"
+                    android:layout_weight="0.25"/>
+                <Button
+                    android:text="Favorites"
+                    android:textSize="9sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/fav_button"
+                    android:visibility="gone"
+                    android:layout_weight="0.25"/>
+                <Button
+                    android:text="Finished"
+                    android:textSize="9sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/fin_button"
+                    android:visibility="gone"
+                    android:layout_weight="0.25"/>
+                <Button
+                    android:text="Reading"
+                    android:textSize="9sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/reading_button"
+                    android:visibility="gone"
+                    android:layout_weight="0.25"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
