--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jessie_stam.jessiestam_pset6_desktop.MainActivity"
+    tools:context="jessie_stam.jessiestam_pset6_desktop.Activities.MainActivity"
     android:background="#FFFFFF">
 
     <include
