--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/apk/tools"
-    tools:context="jessie_stam.jessiestam_pset6_desktop.MainActivity">
+    tools:context="jessie_stam.jessiestam_pset6_desktop.Activities.MainActivity">
 
     <item
         android:id="@+id/action_settings"
